<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Title.Inverse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="Thêm món"
        android:textAlignment="center" />

    <include
        android:id="@+id/menu_add_item_milk_tea"
        layout="@layout/item_milk_tea" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackTittle2"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:text="CHỌN ĐƯỜNG"
                    android:textAllCaps="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_shadow_start_color"
                    android:padding="5dp"
                    android:text="BẮT BUỘC"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/select_sugar_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/select_sugar_100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/sugar_100" />

                    <RadioButton
                        android:id="@+id/select_sugar_75"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sugar_75" />

                    <RadioButton
                        android:id="@+id/select_sugar_50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sugar_50" />

                    <RadioButton
                        android:id="@+id/select_sugar_25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sugar_25" />

                    <RadioButton
                        android:id="@+id/select_sugar_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sugar_0" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackTittle2"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:text="CHỌN đá"
                    android:textAllCaps="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/cardview_shadow_start_color"
                    android:padding="5dp"
                    android:text="BẮT BUỘC"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/select_ice_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/select_ice_100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/ice_100" />

                    <RadioButton
                        android:id="@+id/select_ice_75"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ice_75" />

                    <RadioButton
                        android:id="@+id/select_ice_50"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ice_50" />

                    <RadioButton
                        android:id="@+id/select_ice_25"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ice_25" />

                    <RadioButton
                        android:id="@+id/select_ice_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ice_0" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackTittle2"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:text="CHỌN topping"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/select_topping_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topping_1" />

                <CheckBox
                    android:id="@+id/select_topping_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topping_2" />

                <CheckBox
                    android:id="@+id/select_topping_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topping_3" />

                <CheckBox
                    android:id="@+id/select_topping_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topping_4" />

                <CheckBox
                    android:id="@+id/select_topping_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topping_5" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/linearlayout_add_to_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_add_shopping" />

            <TextView
                style="@style/TextAppearance.AppCompat.Title.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thêm vào giỏ" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right">

            <TextView
                android:id="@+id/tv_price_milk_tea_after_topping"
                style="@style/TextAppearance.AppCompat.Title.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="10,000đ" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>